--- a/ProyectoWebEncuestas/Views/Admin/EliminarEncuestas.cshtml
+++ b/ProyectoWebEncuestas/Views/Admin/EliminarEncuestas.cshtml
@@ -59,7 +59,7 @@
                     return response.text().then(text => { throw new Error(text); });
                 }
                 alert("Encuesta eliminada correctamente.");
-                window.location.href = "/Admin/Index";
+                window.location.href = "/Admin/Encuestas";
             })
             .catch(error => {
                 console.error('Error:', error);
