--- a/ProyectoWebEncuestas/Views/Users/VerMisEncuestas.cshtml
+++ b/ProyectoWebEncuestas/Views/Users/VerMisEncuestas.cshtml
@@ -83,6 +83,10 @@
 
 </script>
 <style>
+    .encuestas-dashboard{
+        padding:10px;
+        margin-top:40px;
+    }
     .encuesta-card {
         background: #fff;
         border-radius: 14px;
