--- a/ProyectoWebEncuestas/Views/Users/ResponderPreguntas.cshtml
+++ b/ProyectoWebEncuestas/Views/Users/ResponderPreguntas.cshtml
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="form-buttons">
-            <button type="submit" class="submit-button">Finalizar encuesta</button>
+            <button type="submit" class="submit-button">Terminar</button>
             <button type="button" class="cancel-button" onclick="cancelSurvey()">Cancelar</button>
         </div>
 
