--- a/ProyectoWebEncuestas/Views/Encuestador/EliminarEncuesta.cshtml
+++ b/ProyectoWebEncuestas/Views/Encuestador/EliminarEncuesta.cshtml
@@ -20,8 +20,6 @@
 <script>
     const encuestaId = new URLSearchParams(window.location.search).get("id");
     const token = localStorage.getItem("token");
-
-    // Obtener y mostrar el nombre de la encuesta
     window.onload = function () {
         fetch(`https://encuesta-api.websitos256.com/api/encuestas/${encuestaId}`, {
             headers: {
@@ -55,7 +53,7 @@
                     return response.text().then(text => { throw new Error(text); });
                 }
                 alert("Encuesta eliminada correctamente.");
-                window.location.href = "/Users/Index";
+                window.location.href = "/Encuestador/Index";
             })
             .catch(error => {
                 console.error('Error:', error);
