--- a/ProyectoWebEncuestas/Views/Home/Login.cshtml
+++ b/ProyectoWebEncuestas/Views/Home/Login.cshtml
@@ -69,13 +69,11 @@
         localStorage.setItem("esAdmin", data.esAdmin);
         localStorage.setItem("nombre", data.nombre);
           localStorage.setItem("idUsuario", data.id);
-    //si es que entra y genera el token, se establece y guarda este, al igual
-            //que identificar si el ingresado esAdmin, o no, para ingresar a la vista correspondiente
 
         if (data.esAdmin === "Admin") {
             window.location.href = "/Admin/Index";
         } else {
-            window.location.href = "/Users/Index";
+            window.location.href = "/Encuestador/Index";
         }
     } else {
             alert("Usuario o contraseña incorrectos");
