--- a/ProyectoWebEncuestas/Views/Encuestador/Index.cshtml
+++ b/ProyectoWebEncuestas/Views/Encuestador/Index.cshtml
@@ -49,7 +49,7 @@
 
                 `;
                 card.addEventListener("click", function () {
-                    window.location.href = `DetalleEncuesta?id=${encuesta.id}`;
+                    window.location.href = `Detalles?id=${encuesta.id}`;
                 });
 
                 container.appendChild(card);
