--- a/ProyectoWebEncuestas/Views/Encuestador/MisEncuestas.cshtml
+++ b/ProyectoWebEncuestas/Views/Encuestador/MisEncuestas.cshtml
@@ -53,7 +53,7 @@
         </div>
     `;
                    card.addEventListener("click", function () {
-                    window.location.href = `DetalleEncuesta?id=${encuesta.id}`;
+                    window.location.href = `Detalles?id=${encuesta.id}`;
                 });
                    card.querySelectorAll('.survey-actions a').forEach(a => {
         a.addEventListener('click', function (e) {
