--- a/ProyectoWebEncuestas/Views/Shared/_LayoutAdmin.cshtml
+++ b/ProyectoWebEncuestas/Views/Shared/_LayoutAdmin.cshtml
@@ -15,8 +15,8 @@
     <div class="menu-modal" id="menuModal">
         <div class="menu-content">
             <div class="menu-header">
-                <span class="user-name" id="userName">Usuario</span>
-                <span class="close-menu" onclick="toggleMenu()">☰</span>
+   <span class="user-name">Bienvenido/a <span class="user-name" id="userName">Usuario</span>
+</span>                <span class="close-menu" onclick="toggleMenu()">☰</span>
             </div>
             <div class="menu-links">
                 <a href="/Admin/Index">Panel central</a>
