--- a/ProyectoWebEncuestas/Views/Encuestador/AgregarEncuesta.cshtml
+++ b/ProyectoWebEncuestas/Views/Encuestador/AgregarEncuesta.cshtml
@@ -91,7 +91,7 @@
                   })
                   .then(data => {
                           console.log("Encuesta creada:", data);
-                          window.location.href = "VerMisEncuestas";
+                          window.location.href = "MisEncuestas";
                   })
                   .catch(error => {
                          console.error("Error al crear la encuesta:", error);
