--- a/ProyectoWebEncuestas/Views/Shared/_Layout.cshtml
+++ b/ProyectoWebEncuestas/Views/Shared/_Layout.cshtml
@@ -15,12 +15,13 @@
     <div class="menu-modal" id="menuModal">
         <div class="menu-content">
             <div class="menu-header">
-                <span class="user-name" id="userName">Usuario</span>
+                <span class="user-name">Bienvenido/a <span class="user-name" id="userName">Usuario</span>
+</span>
                 <span class="close-menu" onclick="toggleMenu()">☰</span>
             </div>
             <div class="menu-links">
                 <a href="/Encuestador/Index">Otras Encuestas</a>
-                <a href="#" onclick="goToMisEncuestas()">Mis Encuestas</a>
+                <a href="#" onclick="MisEncuestas()">Mis Encuestas</a>
                 <a href="/Home/Login" class="logout-link">Cerrar sesión</a>
 
             </div>
@@ -36,13 +37,13 @@
             modal.classList.toggle('active');
         }
 
-        function goToMisEncuestas() {
+        function MisEncuestas() {
             const id = localStorage.getItem("idUsuario");
             if (!id) {
                 alert("No se encontró el ID del usuario");
                 return;
             }
-            window.location.href = `/Encuestador/VerMisEncuestas`;
+            window.location.href = `/Encuestador/MisEncuestas`;
         }
 
         window.addEventListener('DOMContentLoaded', () => {
