--- a/ProyectoWebEncuestas/wwwroot/assets/styles.css
+++ b/ProyectoWebEncuestas/wwwroot/assets/styles.css
@@ -1,11 +1,9 @@
-/* Reset y fuente básica */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
 }
 
-/* Barra superior */
 .header-bar {
   position: fixed;
   top: 0;
@@ -145,7 +143,6 @@ body {
   background-color: #f0f0f0;
 }
 
-/* Contenedor principal */
 .container {
   max-width: 960px;
   margin: 80px auto 40px;
@@ -155,7 +152,6 @@ body {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Sección filtro */
 .filter-section {
   margin-bottom: 20px;
   display: flex;
@@ -168,7 +164,6 @@ body {
   color: #333;
 }
 
-/* Input filtro */
 #fechaFiltro {
   padding: 6px 10px;
   font-size: 1rem;
@@ -176,7 +171,6 @@ body {
   border-radius: 4px;
 }
 
-/* Secciones de encuestas */
 .featured-surveys, .all-surveys {
   margin-bottom: 30px;
 }
@@ -187,7 +181,7 @@ body {
   color: #007bff;
 }
 
-/* Lista de encuestas */
+
 .survey-list {
   display: flex;
   flex-direction: column;
@@ -363,21 +357,6 @@ body {
   font-size: 0.9rem;
 }
 
-.label-opcion.uno {
-  color: #d9534f; /* rojo suave */
-}
-.label-opcion.dos {
-  color: #f0ad4e; /* naranja */
-}
-.label-opcion.tres {
-  color: #f7e463; /* amarillo */
-}
-.label-opcion.cuatro {
-  color: #5bc0de; /* azul */
-}
-.label-opcion.cinco {
-  color: #5cb85c; /* verde */
-}
 
 
 
@@ -462,7 +441,7 @@ body {
     gap: 4px;
     align-self: center;
     margin-top:20px;
-    margin-left: 20px; /* un pequeño espacio desde el input de número */
+    margin-left: 20px; 
 }
 
     .delete-buttonn:hover {
@@ -494,7 +473,6 @@ body {
         border: 1px solid #ccc;
         border-radius: 4px;
     }
-/* Botón Finalizar */
 .form-buttons {
   display: flex;
   justify-content: center; 
